# Q-ReAlign

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: example_iqa.yaml  onealign.yaml
docs/: ADAPTING.md  METHOD.md
examples/data/: sample.csv
qalign/: __init__.py  _swift_register.py  cache.py  callback.py  cli.py  config.py  datasets.py  frames.py  infer.py  levels.py  model.py  prompts.py  scorer.py  template.py  train.py
scripts/: launch_pod.example.sh  train.sh
tests/: test_template.py
